# enviroplus-exporter

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  enviroplus-exporter.service  pyproject.toml  requirements-dev.txt  requirements.txt
src/: enviroplus_exporter.py
stubs/bme280/: __init__.pyi
stubs/i2cdevice/: __init__.pyi  adapter.pyi
